# django-snyk-scaffolding

./: pyproject.toml
todo_app/: .dccache
