[tool.poetry]
name = "django-todo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
psycopg2-binary = "2.9.6"
python-dotenv = "1.0.0"
sqlparse = "0.4.4"
typing-extensions = "4.7.1"
django = "4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
